--- a/assets/style.css
+++ b/assets/style.css
@@ -61,3 +61,9 @@ body {
   padding: 30px;
   margin-top: 20px;
 }
+
+@media screen and (max-width: 513px) {
+  .button {
+    padding: 10px;
+  }
+}
